# pcl-release

./: 0001-Disable-SSE-checks.patch  0001-Fixes-for-the-rules-file.patch  0001-Install-package.xml.patch  0001-Patches-to-upstream-for-Groovy-ROS.patch  0001-patches-for-upstream-from-groovy-patches.patch  0002-Disable-PCL-SSE-checks.patch  0002-Install-package.xml.patch  0002-disabling-SSE-checks.patch  0002-those-headers-are-provided-by-ROS.patch  0003-Importing-upstream-fix-https-github.com-PointCloudLi.patch  0003-Importing-upstream-patch-https-github.com-PointCloud.patch  0003-adding-package.xml.patch  0003-removing-ROS-PCL-header-files-integration-of-pcl_msg.patch  0004-Fix-bug-in-PCL-with-installed-headers.patch  0004-fixing-missing-TextureMesh.h-export.patch  0005-Setting-USE_ROS-to-ON-by-default.patch  0006-Removing-copyright-tag-from-package.xml.patch  0007-Adding-build_type-as-cmake.patch  0008-Updated-package.xml-to-have-buildtool_depend-catkin-.patch  0009-add-missing-dep-on-catkin.patch  0010-So-actually-fixing-the-buildtool-depend-on-catkin.patch  0011-fixed-warning-SHOT-deprecated.patch  0012-fixing-find_package-ROS.patch  0013-fixing-http-dev.pointclouds.org-issues-699-note-9.patch  0014-ROS_LIBRARIES-catkin_LIBRARIES.patch  0015-fixed-typo.patch  0016-adding-missing-REQUIRED-argument-to-find_package.patch  0017-fixing-pragma-warning.patch  0018-pragma-warning-is-MSVS-preprocessor-code.patch  CMakeLists.txt  README.md  bloom.conf  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
cmake/: pcl_find_ros.cmake
common/: CMakeLists.txt
(+8 files in other folders)
