<package>
  <name>pcl</name>
  <version>1.7.0</version>
  <description>The Point Cloud Library (or PCL) for point cloud processing - development
    The PCL framework contains numerous state-of-the art algorithms including
    filtering, feature estimation, surface reconstruction, registration, model
    fitting and segmentation.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <author>Open Perception</author>
  <license>BSD</license>

  <url type="website">http://www.pointclouds.org</url>
  <url type="bugtracker">http://dev.pointclouds.org</url>
  <url type="repository">https://github.com/PointCloudLibrary/pcl</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libflann-dev</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libvtk</build_depend>
  <build_depend>python-sphinx</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>catkin</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libflann-dev</run_depend>
  <run_depend>libflann</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>libvtk</run_depend>
  <run_depend>python-sphinx</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
